# EternalGarden

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  rebuild.bat
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/: Animation.hpp  AnimatorSystem.hpp  BaseComponent.hpp  Camera.hpp  Character.hpp  Collider.hpp  CollisionHandler.hpp  Component.hpp  ComponentTypes.hpp  Components.hpp  Configuration.hpp  ConfigurationLoader.hpp  Core.hpp  Ennemy.hpp  Event.hpp  Game.hpp  GameEngine.hpp  GameObject.hpp  GameState.hpp  GameTypes.hpp  GraphicWindow.hpp  IGameObject.hpp  ImageLayer.hpp  Input.hpp  InputSystem.hpp  Manager.hpp  MapLoader.hpp  Menu.hpp  ObjectFactory.hpp  OldRigidBody.hpp  OldSpriteAnimation.hpp  OldTextureManager.hpp  OldWorld.hpp  PhysicSystem.hpp  Player.hpp  PlayerCommand.hpp  Render.hpp  RigidBody.hpp  SequenceAnimation.hpp  SpriteAnimation.hpp  (+11 more)
include/components/: CameraComponent.hpp  RigidBody.hpp  SpriteAnimation.hpp  SpriteRenderer.hpp  Transformation.hpp  World.hpp
include/core/: CollisionEngine.hpp  ComponentStore.hpp  ECSTypes.hpp  GameTimer.hpp  LevelDefinition.hpp  LuaAccessor.hpp  LuaManager.hpp  Manager.hpp  Store.hpp  TextureStore.hpp  WorldObjectDefinition.hpp
include/managers/: GameManager.hpp
include/scripting/: LuaComponentFactory.hpp  LuaLevelLoader.hpp  LuaWorldLoader.hpp
include/systems/: AnimatorSystem.hpp  CameraSystem.hpp  InputSystem.hpp  PhysicSystem.hpp  Render.hpp  SoundSystem.hpp  TextDefinition.hpp  TextSystem.hpp
spike/: OpenGLHelper.cpp  OpenGLHelper.h  vulkan_bootstrap.memo
src/: Animation.cpp  Animation.hpp  AnimationSystem.cpp  Camera.cpp  Camera.hpp  Collider.hpp  CollisionHandler.cpp  CollisionHandler.hpp  ConfigurationLoader.cpp  ConfigurationLoader.hpp  Ennemy.cpp  Ennemy.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  GameObject.hpp  GameState.hpp  GraphicWindow.cpp  GraphicWindow.hpp  ImageLayer.cpp  ImageLayer.hpp  Input.cpp  Input.hpp  InputSystem.cpp  Layer.cpp  Layer.hpp  LuaScript.cpp  LuaScript.hpp  Manager.cpp  MapLoader.cpp  MapLoader.hpp  Menu.cpp  Menu.hpp  ObjectFactory.cpp  OldSpriteAnimation.cpp  OldTextureManager.cpp  OldWorld.cpp  (+23 more)
src/Component/: BaseComponent.hpp  TransformerComponent.cpp  TransformerComponent.hpp
src/Types/: Configuration.hpp  Flip.hpp  GameTypes.hpp  ObjectMetaData.hpp  RigidBody.hpp  Size.hpp  Vector2.hpp  Vector2F.hpp  Vector2I.hpp
src/components/: ComponentTypes.hpp  Components.hpp  PlayerCommand.hpp  RigidBody.hpp  SpriteAnimation.hpp  SpriteRenderer.hpp  Transformation.hpp  World.hpp
src/core/: CollisionEngine.cpp  Component.hpp  ComponentStore.hpp  Core.hpp  GameTimer.cpp  LuaAccessor.cpp  LuaManager.cpp  Manager.cpp  Manager.hpp  Store.cpp  Store.hpp  TextureStore.cpp  Vector2D.hpp
src/ecs/: Components.hpp  Ecs.hpp
src/managers/: GameManager.cpp
src/scripting/: LuaComponentFactory.cpp  LuaLevelLoader.cpp  LuaWorldLoader.cpp
src/systems/: AnimationSystem.cpp  AnimatorSystem.hpp  CameraSystem.cpp  InputSystem.cpp  InputSystem.hpp  PhysicSystem.cpp  PhysicSystem.hpp  Render.cpp  Render.hpp  SoundSystem.cpp  System.cpp  TextSystem.cpp
